<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C280D"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context="com.example.inputcontrols1.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_marginEnd="10dp"
        android:text="@string/hi" />

    <EditText
        android:id="@+id/editText"
        style="@style/Widget.AppCompat.EditText"
        android:background="@drawable/rounded_corner"
        android:padding="5dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hi"
        android:inputType="textCapSentences"
        android:autofillHints="" />

    <AutoCompleteTextView
        android:id="@+id/autocompleteView"
        style="@style/Widget.AppCompat.EditText"
        android:background="@drawable/rounded_corner"
        android:padding="5dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/conutry_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_cheese"
            android:buttonTint="#FFFFFF"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/cheese"
            tools:targetApi="21" />

        <CheckBox
            android:id="@+id/checkbox_meat"
            android:buttonTint="#FFFFFF"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/meat"
            tools:targetApi="21" />

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_pirates"
            android:buttonTint="#FFFFFF"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:text="@string/pirates"
            tools:targetApi="21" />

        <RadioButton
            android:id="@+id/radio_ninjas"
            android:buttonTint="#FFFFFF"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/ninjas"
            tools:targetApi="21" />
    </RadioGroup>

</LinearLayout>